# framelesshelper

./: .gitignore  .gitmodules  BUGS.md  CMakeLists.txt  FramelessHelperConfig.cmake.in  FramelessHelperModuleConfig.cmake.in  FramelessHelperModuleTargets.cmake.in  LICENSE  README.md  README_unix.md  README_win32.md  build.bat  framelesshelper.cpp  framelesshelper.h  framelesshelper.pro  framelesshelper.rc  framelesshelper_global.h  framelesshelper_qt.cpp  framelesshelper_qt.h  framelesshelper_unix.pro  framelesshelper_win.cpp  framelesshelper_win32.cpp  framelesshelper_win32.h  framelesshelper_windows.h  framelesshelper_windows.pro  framelesshelper_windows.rc  framelessquickhelper.cpp  framelessquickhelper.h  framelesswidget.pro  framelesswindowsmanager.cpp  framelesswindowsmanager.h  framelesswindowsmanager_p.h  lib.pro  main.cpp  main_unix.cpp  main_windows.cpp  manifest.xml  qtacryliceffecthelper.cpp  qtacryliceffecthelper.h  qtacryliceffecthelper_win32.cpp  (+21 more)
core/: CMakeLists.txt  (+15 more)
examples/: CMakeLists.txt  common.pri  deployqt.cmake  example.manifest  example.rc  examples.pro  images.qrc  resources.qrc  windows.manifest  windows.rc
examples/QMainWindow/: FramelessHelper.pri  MainWindow.ui  QMainWindow.pro  TitleBar.ui  main.cpp
examples/QQPlayer/: QQPlayer.rc  README.txt  build.bat  main.cpp
examples/QQPlayer-demo/: CMakeLists.txt  QQPlayer.exe.manifest  build.bat  images.qrc  main.cpp  qml.qrc
examples/QWidget/: QWidget.pro  main.cpp
examples/QWidget2/: QWidget2.pro  main.cpp  widget.cpp  widget.h
examples/Quick/: Quick.pro  main.cpp  qml.qrc
examples/Quick/qml/: main_unix.qml  main_windows.qml
examples/Win32Demo/: Win32Demo.pro  main.cpp  widget.cpp  widget.h  widget.ui
examples/dialog/: CMakeLists.txt  dialog.cpp  dialog.h  main.cpp
examples/mainwindow/: CMakeLists.txt  MainWindow.ui  TitleBar.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.pro  systembutton.cpp
examples/minimal/: CMakeLists.txt  flwindow.cpp  flwindow.h  main.cpp
examples/openglwidget/: CMakeLists.txt  glwidget.cpp  glwidget.h  images.qrc  logo.h  main.cpp  mainwindow.cpp  mainwindow.h  systembutton.h
examples/qmainwindow/: MainWindow.ui  TitleBar.ui  main.cpp  qmainwindow.pro
examples/quick/: ApplicationWindow.qml  CMakeLists.txt  HomePage.qml  MainWindow.qml  Window.qml  main.cpp  qml.qrc  quick.pro  quicksettings.cpp  quicksettings.h  resources.qrc  settings.cpp  settings.h
examples/quick-blur/: CMakeLists.txt  MainWindow.qml  main.cpp  qml.qrc  settings.h
examples/quick-blur/scripts/: d3d11.bat  opengl.bat  vulkan.bat
examples/quick/qml/: ApplicationWindow.qml  CloseButton.qml  HomePage.qml  MainWindow.qml  MaximizeButton.qml  MinimizeButton.qml  Window.qml  main.qml
examples/quick/scripts/: d3d11.bat  d3d12.bat  opengl.bat  vulkan.bat
examples/rendercontrol_opengl/: CMakeLists.txt  main.cpp  rendercontrol.qrc  rendercontrol_opengl.pro  window_singlethreaded.cpp  window_singlethreaded.h
examples/rendercontrol_opengl/qml/: MinimizeButton.qml  main.qml
examples/resources/images/: README.txt
examples/resources/qml/: MaximizeButton.qml  MinimizeButton.qml  main.qml
examples/shared/: example.manifest  example.rc  log.cpp  log.h  settings.cpp  settings.h
examples/widget/: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.pro
examples/widget-blur/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
src/: CMakeLists.txt  framelesshelper.rc  framelesshelper_global.h  lib.pro
src/core/: CMakeLists.txt  VC-LTL.cmake  chromepalette.cpp  cmakehelper.cmake  framelessconfig.cpp  framelesshelper.config.in  framelesshelper.cpp  framelesshelper.h  framelesshelper.rc.in  framelesshelper.version.in  framelesshelper_qt.cpp  framelesshelper_qt.h  framelesshelper_version.inc.in  framelesshelper_win.cpp  framelesshelper_win.h  framelesshelper_win32.cpp  framelesshelper_windows.h  framelesshelpercore.qrc  framelesshelpercore.rc  framelesshelpercore.rc.in  framelesshelpercore_global.cpp  framelesshelpercore_global.h  framelessmanager.cpp  framelesswindowsmanager.cpp  framelesswindowsmanager.h  framelesswindowsmanager_p.h  global.cpp  micamaterial.cpp  nswindow_proxy.h  nswindow_proxy.mm  platformsupport_linux.cpp  platformsupport_win.cpp  qtx11extras.cpp  qtx11extras_p.h  qwinregistry.cpp  qwinregistry_p.h  registry.cpp  registry_p.h  registrykey.cpp  scoped_nsobject.h  (+15 more)
src/core/images/: README
src/quick/: CMakeLists.txt  framelesshelper_quick.cpp  framelesshelper_quick.h  framelesshelperimageprovider.cpp  framelesshelperimageprovider.h  framelesshelperquick.qrc  framelesshelperquick.rc  framelesshelperquick.rc.in  framelesshelperquick_global.cpp  framelesshelperquick_global.h  framelessquickapplicationwindow.cpp  framelessquickeventfilter.cpp  framelessquickeventfilter.h  framelessquickhelper.cpp  framelessquickhelper.h  framelessquickhelper_p.h  framelessquickmodule.cpp  framelessquickmodule.h  framelessquickutils.cpp  framelessquickutils.h  framelessquickwindow.cpp  framelessquickwindow.h  framelessquickwindow_p.h  global.cpp  plugin.cpp  quickchromepalette.cpp  quickimageitem.cpp  quickmicamaterial.cpp  quickstandardclosebutton.cpp  quickstandardclosebutton_p.h  quickstandardmaximizebutton.cpp  quickstandardmaximizebutton_p.h  quickstandardminimizebutton.cpp  quickstandardminimizebutton_p.h  quickstandardsystembutton.cpp  quickstandardtitlebar.cpp  quickstandardtitlebar_p.h  quickwindowborder.cpp
src/quick/module/: qmldir
src/widget/: framelesswindow.h
src/widgets/: CMakeLists.txt  framelessdialog.cpp  framelesshelperwidgets.rc  framelesshelperwidgets.rc.in  framelesshelperwidgets_global.cpp  framelesshelperwidgets_global.h  framelessmainwindow.cpp  framelessmainwindow.h  framelessmainwindow_p.h  framelesswidget.cpp  framelesswidget.h  framelesswidgetshelper.cpp  framelesswidgetshelper.h  framelesswidgetshelper_p.h  global.cpp  standardsystembutton.cpp  standardsystembutton.h  standardsystembutton_p.h  standardtitlebar.cpp  standardtitlebar.h  widgetssharedhelper.cpp  widgetssharedhelper_p.h
tools/dpitester/: CMakeLists.txt  app.manifest  app.rc  main.cpp
(+157 files in other folders)
